--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/IBatchBarcodeListView.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/IBatchBarcodeListView.html
@@ -109,7 +109,7 @@ var pathtoroot = "../../../../../../../";
 public interface <span class="typeNameLabel"><a href=IBatchBarcodeListView.html>IBatchBarcodeListView</a></span>
 
                     </pre>
-                    <div class="block"><p>Represents list of scanned barcodes</p></div>
+                    <div class="block"><p>Represents list of scanned barcodes.</p></div>
                 </li>
             </ul>
         </div>
