--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/BatchBarcodeScannerConfiguration.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/BatchBarcodeScannerConfiguration.html
@@ -107,8 +107,8 @@ var pathtoroot = "../../../../../../../../";
                     <hr>
                     <pre class="wrap-overflow">
 
-public class <span class="typeNameLabel"><a href=BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a></span>
-extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScannerConfiguration</a>
+public final class <span class="typeNameLabel"><a href=BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a></span>
+extends <a href=../../configuration/CommonBarcodeScannerConfiguration.html>CommonBarcodeScannerConfiguration</a>
                     </pre>
                     <div class="block"><p>Class which is used to configure io.scanbot.sdk.ui.view.barcode.batch.BatchBarcodeScannerActivity Contains settings indicating views Behaviour, Texts and Appearance</p></div>
                 </li>
@@ -256,7 +256,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setNoBarcodesTitle(String)>setNoBarcodesTitle</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> noBarcodesTitle) </code>
                                             </th>
-                                            <td class="colLast">Text of the message that there are no barcodes scanned</td>
+                                            <td class="colLast">Text of the message that there are no barcodes scanned.</td>
                                         </tr>
                                         
                                         <tr id="i2" class="altColor">
@@ -264,7 +264,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setSubmitButtonTitle(String)>setSubmitButtonTitle</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> submitButtonTitle) </code>
                                             </th>
-                                            <td class="colLast">Text of the button which finishes the flow</td>
+                                            <td class="colLast">Text of the button which finishes the flow.</td>
                                         </tr>
                                         
                                         <tr id="i3" class="rowColor">
@@ -272,7 +272,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setDetailsBackgroundColor(Integer)>setDetailsBackgroundColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color) </code>
                                             </th>
-                                            <td class="colLast">The color of bottom sheet</td>
+                                            <td class="colLast">The color of bottom sheet.</td>
                                         </tr>
                                         
                                         <tr id="i4" class="altColor">
@@ -280,7 +280,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setDetailsPrimaryColor(Integer)>setDetailsPrimaryColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color) </code>
                                             </th>
-                                            <td class="colLast">The color of text elements in bottom sheet</td>
+                                            <td class="colLast">The color of text elements in bottom sheet.</td>
                                         </tr>
                                         
                                         <tr id="i5" class="rowColor">
@@ -288,7 +288,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setDetailsActionColor(Integer)>setDetailsActionColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color) </code>
                                             </th>
-                                            <td class="colLast">The color of Submit button</td>
+                                            <td class="colLast">The color of Submit button.</td>
                                         </tr>
                                         
                                         <tr id="i6" class="altColor">
@@ -304,7 +304,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BatchBarcodeScannerConfiguration.html#setBarcodesCountTextColor(Integer)>setBarcodesCountTextColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color) </code>
                                             </th>
-                                            <td class="colLast">The color for barcodes count text</td>
+                                            <td class="colLast">The color for barcodes count text.</td>
                                         </tr>
                                         
                                         <tr id="i8" class="altColor">
@@ -409,7 +409,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setNoBarcodesTitle</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setNoBarcodesTitle(String)>setNoBarcodesTitle</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> noBarcodesTitle)</pre>
-                                        <div class="block"><p>Text of the message that there are no barcodes scanned</p></div>
+                                        <div class="block"><p>Text of the message that there are no barcodes scanned.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -424,7 +424,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setSubmitButtonTitle</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setSubmitButtonTitle(String)>setSubmitButtonTitle</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> submitButtonTitle)</pre>
-                                        <div class="block"><p>Text of the button which finishes the flow</p></div>
+                                        <div class="block"><p>Text of the button which finishes the flow.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -439,7 +439,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setDetailsBackgroundColor</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setDetailsBackgroundColor(Integer)>setDetailsBackgroundColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color)</pre>
-                                        <div class="block"><p>The color of bottom sheet</p></div>
+                                        <div class="block"><p>The color of bottom sheet.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -454,7 +454,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setDetailsPrimaryColor</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setDetailsPrimaryColor(Integer)>setDetailsPrimaryColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color)</pre>
-                                        <div class="block"><p>The color of text elements in bottom sheet</p></div>
+                                        <div class="block"><p>The color of text elements in bottom sheet.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -469,7 +469,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setDetailsActionColor</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setDetailsActionColor(Integer)>setDetailsActionColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color)</pre>
-                                        <div class="block"><p>The color of Submit button</p></div>
+                                        <div class="block"><p>The color of Submit button.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -484,7 +484,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setBarcodesCountText</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setBarcodesCountText(String)>setBarcodesCountText</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> placeholder)</pre>
-                                        <div class="block"><p>The placeholder for barcodes count text. Should be a string in the following format: &quot;%d Codes&quot;</p></div>
+                                        <div class="block"><p>The placeholder for barcodes count text. Should be a string in the following format: &quot;%d Codes&quot;.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -499,7 +499,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setBarcodesCountTextColor</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setBarcodesCountTextColor(Integer)>setBarcodesCountTextColor</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color)</pre>
-                                        <div class="block"><p>The color for barcodes count text</p></div>
+                                        <div class="block"><p>The color for barcodes count text.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -514,7 +514,7 @@ extends <a href=../../configuration/BarcodeScannerConfiguration.html>BarcodeScan
                                     <li class="blockList">
                                         <h4>setFetchingStateText</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BatchBarcodeScannerConfiguration.html#setFetchingStateText(String)>setFetchingStateText</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> text)</pre>
-                                        <div class="block"><p>The text for the data fetching state of the barcode item in a list. Smth &quot;Fetching info…&quot;</p></div>
+                                        <div class="block"><p>The text for the data fetching state of the barcode item in a list. Smth &quot;Fetching info…&quot;.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
