--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/BatchBarcodeScannerConfigurationParams.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/BatchBarcodeScannerConfigurationParams.html
@@ -117,7 +117,7 @@ var pathtoroot = "../../../../../../../../";
 public enum <span class="typeNameLabel"><a href=BatchBarcodeScannerConfigurationParams.html>BatchBarcodeScannerConfigurationParams</a></span>
 extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.html>Enum</a>&lt;<a href=BatchBarcodeScannerConfigurationParams.html>BatchBarcodeScannerConfigurationParams</a>&gt;
                     </pre>
-                    <div class="block"><p>Class containing all the keys which are used to configure CameraView in Barcode default UI</p></div>
+                    <div class="block"><p>Class containing all the keys which are used to configure CameraView in Barcode default UI.</p></div>
                 </li>
             </ul>
         </div>
@@ -381,6 +381,78 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#INITIAL_SCAN_TIMEOUT>INITIAL_SCAN_TIMEOUT</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_ZOOM_FACTOR>CAMERA_ZOOM_FACTOR</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_ZOOM_RANGE>CAMERA_ZOOM_RANGE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_MODULE>CAMERA_MODULE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_PREVIEW_MODE>CAMERA_PREVIEW_MODE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#LOCK_MIN_FOCUS_DISTANCE>LOCK_MIN_FOCUS_DISTANCE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CANCEL_BUTTON_TITLE>CANCEL_BUTTON_TITLE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CANCEL_BUTTON_ICON>CANCEL_BUTTON_ICON</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#FINDER_TEXT_HINT>FINDER_TEXT_HINT</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#ENABLE_CAMERA_EXPLANATION_TEXT>ENABLE_CAMERA_EXPLANATION_TEXT</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#ENABLE_CAMERA_BUTTON_TITLE>ENABLE_CAMERA_BUTTON_TITLE</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#BARCODE_SELECTION_OVERLAY_CONFIGURATION>BARCODE_SELECTION_OVERLAY_CONFIGURATION</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#MINIMUM_TEXT_LENGTH>MINIMUM_TEXT_LENGTH</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
@@ -399,91 +471,31 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     
                                     <tr class="altColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#MSI_PLESSEY_CHECKSUM_ALGORITHMS>MSI_PLESSEY_CHECKSUM_ALGORITHMS</a></a></span></code></th>
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#GS1_DECODING_ENABLED>GS1_DECODING_ENABLED</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#STRIP_CHECK_DIGITS>STRIP_CHECK_DIGITS</a></a></span></code></th>
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#MSI_PLESSEY_CHECKSUM_ALGORITHMS>MSI_PLESSEY_CHECKSUM_ALGORITHMS</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
                                     <tr class="altColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#LOW_POWER_MODE>LOW_POWER_MODE</a></a></span></code></th>
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#STRIP_CHECK_DIGITS>STRIP_CHECK_DIGITS</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#GS1_DECODING_ENABLED>GS1_DECODING_ENABLED</a></a></span></code></th>
+                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#LOW_POWER_MODE>LOW_POWER_MODE</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
                                     <tr class="altColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CODE_DENSITY>CODE_DENSITY</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="rowColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_ZOOM_FACTOR>CAMERA_ZOOM_FACTOR</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="altColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_ZOOM_RANGE>CAMERA_ZOOM_RANGE</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="rowColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_MODULE>CAMERA_MODULE</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="altColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CAMERA_PREVIEW_MODE>CAMERA_PREVIEW_MODE</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="rowColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#LOCK_MIN_FOCUS_DISTANCE>LOCK_MIN_FOCUS_DISTANCE</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="altColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CANCEL_BUTTON_TITLE>CANCEL_BUTTON_TITLE</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="rowColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#CANCEL_BUTTON_ICON>CANCEL_BUTTON_ICON</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="altColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#FINDER_TEXT_HINT>FINDER_TEXT_HINT</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="rowColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#ENABLE_CAMERA_EXPLANATION_TEXT>ENABLE_CAMERA_EXPLANATION_TEXT</a></a></span></code></th>
-                                        <td class="colLast"></td>
-                                    </tr>
-                                    
-                                    <tr class="altColor">
-                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
-                                                href="TODO"><a href=BatchBarcodeScannerConfigurationParams.html#ENABLE_CAMERA_BUTTON_TITLE>ENABLE_CAMERA_BUTTON_TITLE</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
