--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfigurationParams.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfigurationParams.html
@@ -393,6 +393,18 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BarcodeScannerConfigurationParams.html#INITIAL_SCAN_TIMEOUT>INITIAL_SCAN_TIMEOUT</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BarcodeScannerConfigurationParams.html#DELAY_AFTER_SCAN>DELAY_AFTER_SCAN</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=BarcodeScannerConfigurationParams.html#MINIMUM_TEXT_LENGTH>MINIMUM_TEXT_LENGTH</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
@@ -436,6 +448,12 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     <tr class="altColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=BarcodeScannerConfigurationParams.html#CODE_DENSITY>CODE_DENSITY</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BarcodeScannerConfigurationParams.html#BARCODE_SELECTION_OVERLAY_CONFIGURATION>BARCODE_SELECTION_OVERLAY_CONFIGURATION</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
                                     
