--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/base/configuration/OrientationMode.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/base/configuration/OrientationMode.html
@@ -214,13 +214,13 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     <tr class="altColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=OrientationMode.html#PORTRAIT>PORTRAIT</a></a></span></code></th>
-                                        <td class="colLast"><p>Portrait screen orientation lock mode</p></td>
+                                        <td class="colLast"><p>Portrait screen orientation lock mode.</p></td>
                                     </tr>
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=OrientationMode.html#LANDSCAPE>LANDSCAPE</a></a></span></code></th>
-                                        <td class="colLast"><p>Landscape screen orientation lock mode</p></td>
+                                        <td class="colLast"><p>Landscape screen orientation lock mode.</p></td>
                                     </tr>
                                     
                                 </table>
