--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/package-summary.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/package-summary.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>Package io.scanbot.sdk.ui.view.barcode.batch.configuration </title>
+    <title>Package io.scanbot.sdk.util.view </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../../../../../";
+var pathtoroot = "../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,18 +36,18 @@ var pathtoroot = "../../../../../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../index.html">Overview</a></li>
     
     <li class="navBarCell1Rev">Package</li>
     
     
     
-    <li><a href="../../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -79,7 +79,7 @@ var pathtoroot = "../../../../../../../../";
 </header>
 <main role="main">
     <div class="header">
-        <h1 title="Package" class="title">Package io.scanbot.sdk.ui.view.barcode.batch.configuration </h1>
+        <h1 title="Package" class="title">Package io.scanbot.sdk.util.view </h1>
     </div>
         <div class="header">
             <div class="subtitle">
@@ -100,30 +100,6 @@ var pathtoroot = "../../../../../../../../";
     <div class="typeSummary">
 
 <table>
-<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Object</th>
-<th class="colLast" scope="col">Description</th>
-</tr>
-<tbody>
-
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
-</tbody>
-</table>
-
-    </div>
-
-                </li>
-                
-                <li class="blockList">
-                    
-                    
-                    
-                    
-                    
-    <div class="typeSummary">
-
-<table>
 <caption><span>Class Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
 <th class="colFirst" scope="col">Class</th>
@@ -131,31 +107,11 @@ var pathtoroot = "../../../../../../../../";
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a></th><td class="colLast">Class which is used to configure io.scanbot.sdk.ui.view.barcode.batch.</td></tr>
-</tbody>
-</table>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.Edge.html>Edge</a></th><td class="colLast">Represents edge of polygon with near and far points as well as intersecting lines from other edges  pointA handle pointB O========[0]=========O | ^ edgeLine ^ | | | |lineA | lineB | | | | O====================O pointFarA pointFarB</td></tr>
 
-    </div>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.Line.html>Line</a></th><td class="colLast">Representation of line  Calculates line by two points and finds intersection points with other lines  General line formula is a * x + b * y + c = 0</td></tr>
 
-                </li>
-                
-                <li class="blockList">
-                    
-                    
-                    
-                    
-                    
-    <div class="typeSummary">
-
-<table>
-<caption><span>Enum Summary</span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Enum</th>
-<th class="colLast" scope="col">Description</th>
-</tr>
-<tbody>
-
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfigurationParams.html>BatchBarcodeScannerConfigurationParams</a></th><td class="colLast">Class containing all the keys which are used to configure CameraView in Barcode default UI.</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.html>PolygonViewHelper</a></th><td class="colLast">Helper to make it easier to draw polygon on view</td></tr>
 </tbody>
 </table>
 
@@ -179,21 +135,21 @@ var pathtoroot = "../../../../../../../../";
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../index.html">Overview</a></li>
     
     <li class="navBarCell1Rev">Package</li>
     
     
     
-    <li><a href="../../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
