--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.BarcodeSelected.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.BarcodeSelected.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>BarcodeExtensionsFilter </title>
+    <title>BarcodeSelected </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../../../../";
+var pathtoroot = "../../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,19 +36,19 @@ var pathtoroot = "../../../../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
     <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -82,7 +82,7 @@ var pathtoroot = "../../../../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Class BarcodeExtensionsFilter" class="title">Class BarcodeExtensionsFilter</h2>
+        <h2 title="Class BarcodeNavigationEvents.BarcodeSelected" class="title">Class BarcodeNavigationEvents.BarcodeSelected</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -101,12 +101,7 @@ var pathtoroot = "../../../../../../../";
                         <dt>All Implemented Interfaces:</dt>
                         <dd>
                             
-                            <code>io.scanbot.sdk.ui.view.barcode.configuration.IBarcodeFilter</code>
-                            
-                            ,
-                            
-                            
-                            <code>java.io.Serializable</code>
+                            <code>io.scanbot.sdk.ui.utils.Event</code>
                             
                             
                         </dd>
@@ -115,10 +110,10 @@ var pathtoroot = "../../../../../../../";
                     <hr>
                     <pre class="wrap-overflow">
 
-public final class <span class="typeNameLabel"><a href=BarcodeExtensionsFilter.html>BarcodeExtensionsFilter</a></span>
-extends <a href=BarcodeFilter.html>BarcodeFilter</a>
+public final class <span class="typeNameLabel"><a href=BarcodeNavigationEvents.BarcodeSelected.html>BarcodeNavigationEvents.BarcodeSelected</a></span>
+extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                     </pre>
-                    <div class="block"><p>Subclass of BarcodeFilter that only accepts barcodes with extensions.</p></div>
+                    <div class="block"></div>
                 </li>
             </ul>
         </div>
@@ -165,6 +160,12 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>private final <a href=../../../barcode/entity/BarcodeItem.html>BarcodeItem</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeNavigationEvents.BarcodeSelected.html#selected>selected</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -191,7 +192,7 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#BarcodeExtensionsFilter()">BarcodeExtensionsFilter</a></span>()</code></th>
+                                                        href="#BarcodeNavigationEvents.BarcodeSelected(BarcodeItem)">BarcodeNavigationEvents.BarcodeSelected</a></span>(<a href=../../../barcode/entity/BarcodeItem.html>BarcodeItem</a> selected)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -245,11 +246,11 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
-                                            <td class="colFirst"><code><a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            <td class="colFirst"><code>final <a href=../../../barcode/entity/BarcodeItem.html>BarcodeItem</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeExtensionsFilter.html#acceptsBarcode(BarcodeItem)>acceptsBarcode</a>(<a href=../../../../barcode/entity/BarcodeItem.html>BarcodeItem</a> barcode) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeNavigationEvents.BarcodeSelected.html#getSelected()>getSelected</a>() </code>
                                             </th>
-                                            <td class="colLast">Accepts or rejects a scanned barcode.</td>
+                                            <td class="colLast"></td>
                                         </tr>
                                         
                                         </tbody>
@@ -283,11 +284,11 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="BarcodeExtensionsFilter()"></a>
+                                <a name="BarcodeNavigationEvents.BarcodeSelected(BarcodeItem)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
-                                        <h4>BarcodeExtensionsFilter</h4>
-                                        <pre>BarcodeExtensionsFilter()</pre>
+                                        <h4>BarcodeNavigationEvents.BarcodeSelected</h4>
+                                        <pre>BarcodeNavigationEvents.BarcodeSelected(<a href=../../../barcode/entity/BarcodeItem.html>BarcodeItem</a> selected)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -306,25 +307,16 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                             </a>
                                 <h3>Method Detail</h3>
                                 
-                                <a id="acceptsBarcode(BarcodeItem)">
+                                <a id="getSelected()">
                                     <!--   -->
                                 </a>
                                 <ul class=
                                               "blockListLast"
                                           >
                                     <li class="blockList">
-                                        <h4>acceptsBarcode</h4>
-                                        <pre class="methodSignature"> <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=BarcodeExtensionsFilter.html#acceptsBarcode(BarcodeItem)>acceptsBarcode</a>(<a href=../../../../barcode/entity/BarcodeItem.html>BarcodeItem</a> barcode)</pre>
-                                        <div class="block"><p>Accepts or rejects a scanned barcode.</p></div>
-                                        
-                                        <dl>
-                                            <dt><span class="paramLabel">Parameters:</span></dt>
-                                            
-                                            
-                                            <dd><code>barcode</code> - The barcode to be accepted or rejected by the filter.</dd>
-                                            
-                                            
-                                        </dl>
+                                        <h4>getSelected</h4>
+                                        <pre class="methodSignature"> final <a href=../../../barcode/entity/BarcodeItem.html>BarcodeItem</a> <a href=BarcodeNavigationEvents.BarcodeSelected.html#getSelected()>getSelected</a>()</pre>
+                                        <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -351,22 +343,22 @@ extends <a href=BarcodeFilter.html>BarcodeFilter</a>
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
     <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
