--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/PolygonViewHelper.Line.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/PolygonViewHelper.Line.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>Companion </title>
+    <title>Line </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../../../../";
+var pathtoroot = "../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,18 +36,19 @@ var pathtoroot = "../../../../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
+    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -81,7 +82,7 @@ var pathtoroot = "../../../../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Object BarcodeScannerConfiguration.Companion" class="title">Object BarcodeScannerConfiguration.Companion</h2>
+        <h2 title="Class PolygonViewHelper.Line" class="title">Class PolygonViewHelper.Line</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -106,10 +107,10 @@ var pathtoroot = "../../../../../../../";
                     <hr>
                     <pre class="wrap-overflow">
 
-public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Companion.html>BarcodeScannerConfiguration.Companion</a></span>
+public class <span class="typeNameLabel"><a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a></span>
 
                     </pre>
-                    <div class="block"></div>
+                    <div class="block"><p>Representation of line </p> Calculates line by two points and finds intersection points with other lines  General line formula is a * x + b * y + c = 0</div>
                 </li>
             </ul>
         </div>
@@ -154,12 +155,6 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                                             <th class="colFirst" scope="col">Modifier and Type</th>
                                             <th class="colSecond" scope="col">Field</th>
                                             <th class="colLast" scope="col">Description</th>
-                                        </tr>
-                                        
-                                        <tr class="altColor">
-                                            <td class="colFirst"><code>public final static <a href=BarcodeScannerConfiguration.Companion.html>BarcodeScannerConfiguration.Companion</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerConfiguration.Companion.html#INSTANCE>INSTANCE</a></code></th>
-                                            <td class="colLast"></td>
                                         </tr>
                                         
                                     </table>
@@ -236,11 +231,27 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
-                                            <td class="colFirst"><code>final <a href=BarcodeScannerConfiguration.html>BarcodeScannerConfiguration</a></code>
+                                            <td class="colFirst"><code><a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerConfiguration.Companion.html#fromJson(String)>fromJson</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> input) </code>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Line.html#getIntersectionPoint(PolygonViewHelper.Line)>getIntersectionPoint</a>(<a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a> line) </code>
                                             </th>
-                                            <td class="colLast">Creates a screen configuration object from a JSON string.</td>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i1" class="rowColor">
+                                            <td class="colFirst"><code>void</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Line.html#calculateLine(PointF,PointF)>calculateLine</a>(<a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> start, <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> end) </code>
+                                            </th>
+                                            <td class="colLast">Calculate all 3 components of the line</td>
+                                        </tr>
+                                        
+                                        <tr id="i2" class="altColor">
+                                            <td class="colFirst"><code>double</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Line.html#getDistanceToPoint(PointF)>getDistanceToPoint</a>(<a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> point) </code>
+                                            </th>
+                                            <td class="colLast">Calculates distance to point Should be used after line components are calculated</td>
                                         </tr>
                                         
                                         </tbody>
@@ -287,25 +298,59 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                             </a>
                                 <h3>Method Detail</h3>
                                 
-                                <a id="fromJson(String)">
+                                <a id="getIntersectionPoint(PolygonViewHelper.Line)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getIntersectionPoint</h4>
+                                        <pre class="methodSignature"> <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> <a href=PolygonViewHelper.Line.html#getIntersectionPoint(PolygonViewHelper.Line)>getIntersectionPoint</a>(<a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a> line)</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="calculateLine(PointF,PointF)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>calculateLine</h4>
+                                        <pre class="methodSignature"> void <a href=PolygonViewHelper.Line.html#calculateLine(PointF,PointF)>calculateLine</a>(<a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> start, <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> end)</pre>
+                                        <div class="block"><p>Calculate all 3 components of the line</p></div>
+                                        
+                                        <dl>
+                                            <dt><span class="paramLabel">Parameters:</span></dt>
+                                            
+                                            
+                                            <dd><code>start</code> - starting point of segment laying on this line</dd>
+                                            
+                                            
+                                            
+                                            <dd><code>end</code> - ending point of segment laying on this line</dd>
+                                            
+                                            
+                                        </dl>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getDistanceToPoint(PointF)">
                                     <!--   -->
                                 </a>
                                 <ul class=
                                               "blockListLast"
                                           >
                                     <li class="blockList">
-                                        <h4>fromJson</h4>
-                                        <pre class="methodSignature"> final <a href=BarcodeScannerConfiguration.html>BarcodeScannerConfiguration</a> <a href=BarcodeScannerConfiguration.Companion.html#fromJson(String)>fromJson</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> input)</pre>
-                                        <div class="block"><p>Creates a screen configuration object from a JSON string.</p></div>
-                                        
-                                        <dl>
-                                            <dt><span class="paramLabel">Parameters:</span></dt>
-                                            
-                                            
-                                            <dd><code>input</code> - configuration in a JSON format</dd>
-                                            
-                                            
-                                        </dl>
+                                        <h4>getDistanceToPoint</h4>
+                                        <pre class="methodSignature"> double <a href=PolygonViewHelper.Line.html#getDistanceToPoint(PointF)>getDistanceToPoint</a>(<a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> point)</pre>
+                                        <div class="block"><p>Calculates distance to point Should be used after line components are calculated</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -332,21 +377,22 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
+    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
